# eternal

./: .gitignore  CMakeLists.txt  FEATURES.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.claude/: settings.local.json
assets/: eternal-portals.conf  eternal.desktop  wm.desktop
config/: eternal.kdl
docs/: eternal.1
include/eternal/animation/: Animation.hpp  AnimationEngine.hpp  BezierCurve.hpp  SpringAnimation.hpp  Timeline.hpp
include/eternal/config/: ConfigManager.hpp  KDLParser.hpp
include/eternal/core/: Compositor.hpp  LayerSurface.hpp  Output.hpp  OutputManager.hpp  OutputMirror.hpp  Seat.hpp  Server.hpp  Surface.hpp
include/eternal/decoration/: Blur.hpp  Border.hpp  DecorationManager.hpp  RoundedCorners.hpp  Shadow.hpp
include/eternal/gestures/: GestureRecognizer.hpp  TouchGestures.hpp  TrackpadGestures.hpp
include/eternal/input/: InputManager.hpp  KeybindManager.hpp  Keyboard.hpp  Pointer.hpp  Tablet.hpp  Touch.hpp
include/eternal/ipc/: IPCCommands.hpp  IPCServer.hpp
include/eternal/layout/: ColumnsLayout.hpp  DwindleLayout.hpp  FloatingLayout.hpp  GridLayout.hpp  ILayout.hpp  LayoutManager.hpp  MasterLayout.hpp  MonocleLayout.hpp  Overview.hpp  ScrollableLayout.hpp  SpiralLayout.hpp  TabGroup.hpp  WindowNode.hpp
include/eternal/plugins/: PluginAPI.hpp  PluginManager.hpp
include/eternal/protocols/: Accessibility.hpp  Clipboard.hpp  DesktopPortal.hpp  DragDrop.hpp  IdleManager.hpp  SessionLock.hpp
include/eternal/render/: DirectScanout.hpp  DualKawaseBlur.hpp  Effects.hpp  RenderThread.hpp  Renderer.hpp  Shaders.hpp
include/eternal/rules/: WindowRules.hpp  WorkspaceRules.hpp
include/eternal/screenshot/: ScreenRecorder.hpp  Screenshot.hpp
include/eternal/utils/: Logger.hpp  Math.hpp  Profiler.hpp  Signal.hpp  Types.hpp  WlrSceneCompat.h
include/eternal/workspace/: Workspace.hpp  WorkspaceManager.hpp
include/eternal/xwayland/: XWaylandManager.hpp
packaging/: PKGBUILD  eternal-session  eternal.desktop  eternal.spec  flake.nix  wm.desktop
protocols/: eternal-ipc-v1.xml
src/: main.cpp
src/animation/: Animation.cpp  AnimationEngine.cpp  BezierCurve.cpp  SpringAnimation.cpp  Timeline.cpp
src/cli/: EternalCtl.cpp  EternalCtl.hpp  eternalctl_main.cpp
src/config/: ConfigManager.cpp  KDLParser.cpp
src/core/: Compositor.cpp  LayerSurface.cpp  Output.cpp  OutputManager.cpp  OutputMirror.cpp  Seat.cpp  Server.cpp  Surface.cpp
src/decoration/: Blur.cpp  Border.cpp  DecorationManager.cpp  RoundedCorners.cpp  Shadow.cpp
src/gestures/: GestureRecognizer.cpp  TouchGestures.cpp  TrackpadGestures.cpp
src/input/: InputManager.cpp  KeybindManager.cpp  Keyboard.cpp  Pointer.cpp  Tablet.cpp  Touch.cpp
src/ipc/: IPCCommands.cpp  IPCServer.cpp
src/layout/: ColumnsLayout.cpp  DwindleLayout.cpp  FloatingLayout.cpp  GridLayout.cpp  LayoutManager.cpp  MasterLayout.cpp  MonocleLayout.cpp  Overview.cpp  ScrollableLayout.cpp  SpiralLayout.cpp  TabGroup.cpp  WindowNode.cpp
src/plugins/: PluginAPI.cpp  PluginManager.cpp  ScriptBridge.cpp
src/protocols/: Accessibility.cpp  Clipboard.cpp  DesktopPortal.cpp  DragDrop.cpp  IdleManager.cpp  SessionLock.cpp
src/render/: DirectScanout.cpp  DualKawaseBlur.cpp  Effects.cpp  RenderThread.cpp  Renderer.cpp  Shaders.cpp
src/rules/: WindowRules.cpp  WorkspaceRules.cpp
src/screenshot/: ScreenRecorder.cpp  Screenshot.cpp
src/utils/: Color.cpp  Logger.cpp  Math.cpp  Profiler.cpp  Signal.cpp
src/wm/: View.cpp  View.hpp  WindowManager.cpp  WindowManager.hpp
src/workspace/: Workspace.cpp  WorkspaceManager.cpp
src/xwayland/: XWaylandManager.cpp
tests/: CMakeLists.txt  sanitizer.cmake  test_bezier.cpp  test_headless.cpp  test_window_node.cpp
